# keystone

./: CONTRIBUTING.md  Cargo.toml
crates/api-types/: Cargo.toml
crates/api-types/src/: error.rs  error_conv.rs
crates/api-types/src/v3/: domain.rs  domain_conv.rs  project.rs  role_assignment_conv.rs
crates/api-types/src/v4/: spiffe.rs
crates/api-types/src/v4/spiffe/: binding.rs  binding_conv.rs
crates/appcred-driver-sql/: Cargo.toml
crates/assignment-driver-sql/: Cargo.toml
crates/assignment-driver-sql/src/: lib.rs
crates/assignment-driver-sql/src/assignment/: list.rs
crates/catalog-driver-sql/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: identity.rs  lib.rs  security_compliance.rs
crates/core/: Cargo.toml
crates/core-types/src/: auth.rs
crates/core-types/src/assignment/: assignment.rs
crates/core-types/src/identity/: error.rs  user.rs
crates/core-types/src/role/: role.rs
crates/core-types/src/spiffe/: binding.rs  error.rs
crates/core/src/: auth.rs  policy.rs
crates/core/src/assignment/: service.rs
crates/core/src/common/: password_hashing.rs
crates/core/src/identity/: service.rs
crates/core/src/role/: backend.rs  provider_api.rs
crates/core/src/spiffe/: backend.rs  error.rs  mock.rs  service.rs
crates/federation-driver-sql/: Cargo.toml
crates/identity-driver-sql/: Cargo.toml
crates/identity-driver-sql/src/: authenticate.rs
crates/keystone/: Cargo.toml
crates/keystone/src/: lib.rs  policy.rs
crates/keystone/src/api/v3/: mod.rs
crates/keystone/src/api/v3/auth/project/: list.rs
crates/keystone/src/api/v3/domain/: create.rs  delete.rs  list.rs  mod.rs  show.rs  types.rs
crates/keystone/src/api/v3/group/: create.rs  delete.rs  list.rs  show.rs
crates/keystone/src/api/v3/project/: create.rs  delete.rs  list.rs  mod.rs  show.rs
crates/keystone/src/api/v3/role/: create.rs  list.rs  show.rs
crates/keystone/src/api/v3/role_assignment/: list.rs
crates/keystone/src/api/v3/role_assignment/project/user/role/: check.rs  list.rs
crates/keystone/src/api/v3/role_assignment/system/user/role/: check.rs  list.rs
crates/keystone/src/api/v3/user/: create.rs  delete.rs  groups.rs  list.rs  show.rs
crates/keystone/src/api/v4/: mod.rs  spiffe.rs
crates/keystone/src/api/v4/spiffe/: binding.rs
crates/keystone/src/api/v4/spiffe/binding/: create.rs  delete.rs  list.rs  show.rs  update.rs
crates/keystone/src/api/v4/token/restriction/: create.rs  delete.rs  list.rs  show.rs  update.rs
crates/keystone/src/federation/api/identity_provider/: create.rs  delete.rs  list.rs  show.rs  update.rs
crates/keystone/src/federation/api/mapping/: create.rs  delete.rs  list.rs  show.rs  update.rs
crates/keystone/src/k8s_auth/api/instance/: create.rs  delete.rs  list.rs  show.rs  update.rs
crates/keystone/src/k8s_auth/api/role/: delete.rs  list.rs  show.rs  update.rs
crates/keystone/src/spiffe/: mod.rs
crates/role-sql/src/: implied_role.rs  lib.rs
crates/spiffe-driver-raft/: Cargo.toml
doc/src/adr/: 0002-open-policy-agent.md
policy/: identity.rego
policy/assignment/: common.rego  list.rego  list_test.rego
policy/auth/project/: list.rego
policy/auth/token/: revoke.rego  show.rego
policy/federation/: common.rego
policy/federation/identity_provider/: identity_provider_create.rego  identity_provider_create_test.rego  identity_provider_delete.rego  identity_provider_delete_test.rego  identity_provider_list.rego  identity_provider_list_test.rego  identity_provider_show.rego  identity_provider_show_test.rego  identity_provider_update.rego  identity_provider_update_test.rego
policy/federation/mapping/: mapping_create.rego  mapping_create_test.rego  mapping_delete.rego  mapping_delete_test.rego  mapping_list.rego  mapping_list_test.rego  mapping_show.rego  mapping_show_test.rego  mapping_update.rego  mapping_update_test.rego
policy/identity/group/: create.rego  create_test.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego
policy/identity/user/: create.rego  create_test.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego
policy/k8s_auth/instance/: create.rego  create_test.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego  update.rego  update_test.rego
policy/k8s_auth/role/: create.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego  update.rego  update_test.rego
policy/project/: create.rego
policy/resource/domain/: create.rego  create_test.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego
policy/resource/project/: create.rego  create_test.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego
policy/resource/project/user/role/: check.rego  check_test.rego  grant.rego  grant_test.rego  revoke.rego  revoke_test.rego
policy/role/: create.rego  create_test.rego  list.rego  list_test.rego  show.rego
policy/spiffe/binding/: common.rego  create.rego  create_test.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego  update.rego  update_test.rego
policy/token/: common.rego
policy/token/restriction/: create.rego  create_test.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego  update.rego  update_test.rego
policy/user/passkey/register/: finish.rego  finish_test.rego  start.rego  start_test.rego
tests/api/src/: api.rs  common.rs  resource.rs  spiffe.rs
tests/api/src/assignment/grant/project/user/role/: check.rs
tests/api/src/resource/: domain.rs
tests/api/src/spiffe/: binding.rs
tests/integration/: Cargo.toml
tests/integration/src/: resource.rs
tests/integration/src/identity/user/: helpers.rs  update.rs
tests/integration/src/resource/: domain.rs
tests/integration/src/resource/domain/: create.rs  delete.rs  get.rs  list.rs
tests/integration/src/resource/project/: create.rs  delete.rs  get.rs  list.rs
tests/integration/src/token/validate/: trust.rs
