[workspace]
members = [
  "crates/api-types",
  "crates/appcred-driver-sql",
  "crates/assignment-driver-sql",
  "crates/catalog-driver-sql",
  "crates/config",
  "crates/core",
  "crates/core-types",
  "crates/federation-driver-sql",
  "crates/identity-driver-sql",
  "crates/idmapping-driver-sql",
  "crates/k8s-auth-driver-raft",
  "crates/k8s-auth-driver-sql",
  "crates/keystone",
  "crates/resource-driver-sql",
  "crates/role-driver-sql",
  "crates/storage",
  "crates/spiffe-driver-raft",
  "crates/token-driver-fernet",
  "crates/token-restriction-driver-sql",
  "crates/trust-driver-sql",
  "crates/revoke-driver-sql",
  "crates/webauthn",
  "crates/cli-manage",
  "tests/api",
  "tests/integration",
  "tests/federation",
]
exclude = [
  "tests/loadtest"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Artem Goncharov (gtema)"]
rust-version = "1.91"  # MSRV
repository = "https://github.com/openstack-experimental/keystone"
homepage = "https://openstack-experimental.github.io/keystone"
# Exclude content not relevant for the package
exclude = [
  ".github",
  "doc",
  "tests",
  "tools"
]

[workspace.dependencies]
async-trait = { version = "0.1" }
axum = { version = "0.8", default-features = false }
axum-server = { version = "0.8", default-features = false }
base64 = { version = "0.22" }
base64urlsafedata = "0.5"
bcrypt = { version = "0.19" }
byteorder = { version = "1.5" }
bytes = { version = "1.11" }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.6" }
color-eyre = { version = "0.6" }
config = { version = "0.15" }
criterion = { version = "0.8" }
dashmap = "6.2"
derive_builder = { version = "0.20" }
dyn-clone = { version = "1.0" }
eyre = { version = "0.6" }
fernet = { version = "0.2", default-features = false }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
http-body-util = "0.1"
http = { version = "1.4" }
hyper = { version = "1.10" }
hyper-util = { version = "0.1" }
inventory = { version = "0.3" }
itertools = { version = "0.14" }
mockall = { version = "0.14" }
mockall_double = { version = "0.3" }
nix = { version = "0.31", default-features = false }
openidconnect = { version = "4.0" }
openraft = { version = "=0.10.0-alpha.21" }
openstack-keystone-api-types = { version = "0.1", features = ["openapi", "validate", "conv"], path = "crates/api-types" }
openstack-keystone-appcred-driver-sql = { version = "0.1", path = "crates/appcred-driver-sql/" }
openstack-keystone-assignment-driver-sql = { version = "0.1", path = "crates/assignment-driver-sql/" }
openstack-keystone-catalog-driver-sql = { version = "0.1", path = "crates/catalog-driver-sql/" }
openstack-keystone-config = { version = "0.1.0", path = "crates/config"}
openstack-keystone-core = { version = "0.1.0", path = "crates/core" }
openstack-keystone-core-types = { version = "0.1.0", path = "crates/core-types" }
openstack-keystone-distributed-storage = { version = "0.1.0", path = "crates/storage"}
openstack-keystone-federation-driver-sql = { version = "0.1", path = "crates/federation-driver-sql" }
openstack-keystone-k8s-auth-driver-sql = { version = "0.1", path = "crates/k8s-auth-driver-sql/" }
openstack-keystone-k8s-auth-driver-raft = { version = "0.1", path = "crates/k8s-auth-driver-raft/" }
openstack-keystone-identity-driver-sql = { version = "0.1", path = "crates/identity-driver-sql" }
openstack-keystone-idmapping-driver-sql = { version = "0.1", path = "crates/idmapping-driver-sql" }
openstack-keystone-resource-driver-sql = { version = "0.1", path = "crates/resource-driver-sql/" }
openstack-keystone-revoke-driver-sql = { version = "0.1", path = "crates/revoke-driver-sql/" }
openstack-keystone-role-driver-sql = { version = "0.1", path = "crates/role-driver-sql/" }
openstack-keystone-spiffe-driver-raft = { version = "0.1", path = "crates/spiffe-driver-raft/" }
openstack-keystone-token-driver-fernet = { version = "0.1.0", path = "crates/token-driver-fernet" }
openstack-keystone-token-restriction-driver-sql = { version = "0.1", path = "crates/token-restriction-driver-sql/" }
openstack-keystone-trust-driver-sql = { version = "0.1", path = "crates/trust-driver-sql/" }
openstack-keystone-webauthn = { version = "0.1", path = "crates/webauthn/"}
prost = { version = "0.14" }
rand = { version = "0.10" }
regex = { version = "1.12" }
reqwest = { version = "0.13" }
rcgen = { version = "0.14" }
rmp = { version = "0.8" }
rstest = { version = "0.26" }
rustls = { version = "0.23" }
schemars = { version = "1.2" }
scopeguard = "1.2.0"
sea-orm = { version = "1.1", features = ["debug-print", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio", "runtime-tokio-native-tls", "mock"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }
secrecy = { version = "0.10" }
serde = { version = "1.0" }
serde_bytes = { version = "0.11" }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7" }
spiffe = { version = "0.15" }
temp-env = { version = "0.3" }
tempfile = { version = "3.27" }
thiserror = { version = "2.0" }
tokio = { version = "1.52", default-features = false }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7" }
tonic = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tonic-prost = { version = "0.14" }
tower = { version = "0.5" }
tower-http = { version = "0.6" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3" }
tracing-test = { version = "0.2" }
url = { version = "2.5" }
url-macro = { version = "0.2" }
utoipa = { version = "5.5" }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0", default-features = false }
uuid = { version = "1.23", features = ["v4"] }
validator = { version = "0.20" }
webauthn-authenticator-rs = { version = "0.5" }
webauthn-rs = { version = "0.5" }
webauthn-rs-proto = { version = "0.5" }

[profile.release]
strip = true
debug = false
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
#codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
expect_used = "deny"
print_stdout = "deny"
unwrap_used = "deny"
doc_paragraphs_missing_punctuation = "warn"
