[package]
name = "openstack-keystone-appcred-driver-sql"
description = "OpenStack Keystone application credentials SQL driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
inventory.workspace = true
openstack-keystone-config.workspace = true
openstack-keystone-core.workspace = true
openstack-keystone-core-types.workspace = true
secrecy.workspace = true
sea-orm.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
openstack-keystone-core = { workspace = true, features = ["mock"] }
sea-orm = { workspace = true, features = ["mock", "sqlx-sqlite" ]}

[lints]
workspace = true
