[package]
name = "openstack-keystone-config"
description = "OpenStack Keystone configuration"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
chrono = { workspace = true, features = ["now"] }
config = { workspace = true, features = ["async", "ini", "toml"] }
derive_builder.workspace = true
eyre.workspace = true
http.workspace = true
http-serde = "2.1"
notify = "8.2"
regex.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs", "rt", "sync", "time"] }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
url-macro.workspace = true
validator = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
temp-env.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
