[package]
name = "openstack-keystone-core"
description = "OpenStack Keystone service"
version = "0.1.1"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum = { workspace = true, default-features = false, features = ["json"], optional = true }
#axum-server.workspace = true
base64.workspace = true
bcrypt = { workspace = true, features = ["alloc"] }
chrono = { workspace = true, default-features = false }
derive_builder.workspace = true
eyre.workspace = true
inventory.workspace = true
jsonwebtoken = { version = "10.4", features = ["rust_crypto"] }
openstack-keystone-api-types = { workspace = true, optional = true }
openstack-keystone-core-types.workspace = true
openstack-keystone-config.workspace = true
openstack-keystone-distributed-storage.workspace = true
mockall = { workspace = true, optional = true }
rand.workspace = true
reqwest = { workspace = true, features = ["json", "http2", "gzip", "deflate"] }
#rustls.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
spiffe.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
validator.workspace = true

[dev-dependencies]
config = { workspace = true }
httpmock = { version = "0.8", features = ["http2"] }
mockall.workspace = true
openstack-keystone-core-types = { workspace = true, features = ["mock"] }
rstest.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
url.workspace = true

[features]
default = []
api = ["openstack-keystone-api-types/builder", "dep:axum", "openstack-keystone-api-types/conv"]
bench_internals = []
mock = ["dep:mockall", "openstack-keystone-core-types/mock"]
