[package]
name = "openstack-keystone-federation-driver-sql"
description = "OpenStack Keystone SQL driver for the federation provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["now"] }
inventory.workspace = true
openstack-keystone-core.workspace = true
openstack-keystone-core-types.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
derive_builder.workspace = true
chrono = { workspace = true, features = ["now"] }
openstack-keystone-core = { workspace = true, features = ["mock"] }
sea-orm = { workspace = true, features = ["mock", "sqlx-sqlite" ]}
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
