[package]
name = "openstack-keystone-identity-driver-sql"
description = "OpenStack Keystone SQL driver for the identity provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["now"] }
inventory.workspace = true
openstack-keystone-config.workspace = true
openstack-keystone-core.workspace = true
openstack-keystone-core-types.workspace = true
sea-orm.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
chrono = { workspace = true, features = ["now"] }
derive_builder.workspace = true
openstack-keystone-core = { workspace = true, features = ["mock"] }
sea-orm = { workspace = true, features = ["mock", "sqlx-sqlite" ]}
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing-test = { workspace = true, features = ["no-env-filter"] }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
