[package]
name = "test_integration"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.dist]
dist = false

[dependencies]
chrono.workspace = true
eyre.workspace = true
inventory.workspace = true
itertools.workspace = true
openstack-keystone-config.workspace = true
openstack-keystone-api-types = { workspace = true, features = ["builder", "conv"] }
openstack-keystone-core = { workspace = true, features = ["mock"] }
openstack-keystone-core-types = { workspace = true, features = ["mock"] }
openstack-keystone-identity-driver-sql = { version = "0.1", path = "../../crates/identity-driver-sql/" }
openstack-keystone-token-driver-fernet.workspace = true
openstack-keystone-trust-driver-sql = { version = "0.1", path = "../../crates/trust-driver-sql/" }
openstack-keystone-distributed-storage.workspace = true
openstack-keystone = { version = "0.1", path = "../../crates/keystone/" }
rcgen.workspace = true
sea-orm.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
tempfile.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-test = { version = "0.2", features = ["no-env-filter"] }
uuid = { workspace = true, features = ["v4"] }

[[test]]
name = "integration"
path = "src/integration.rs"
